chore(globals.css): updated global styles for improved consistency and responsiveness chore(page.tsx): refactored page structure for better readability and maintainability fix(middleware.ts): resolved locale handling issue to ensure correct language display fix(with-locale.ts):

--- a/app/[lang]/globals.css
+++ b/app/[lang]/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   :root {
-    --pink: 332, 100%, 41%;
+    --pink: 334, 97%, 39%;
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
 
@@ -96,6 +96,21 @@
   font-weight: normal;
   font-style: normal;
   font-display: swap;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #c30557;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #fff;
 }
 
 .custom-card {
